fix layout (desktop) on mobile

--- a/src/assets/scss/globals/_main.scss
+++ b/src/assets/scss/globals/_main.scss
@@ -27,7 +27,7 @@ a {
 a,
 button {
   cursor: pointer;
-  font-size:1rem;
+  font-size: 1rem;
 }
 
 h1 {
@@ -227,6 +227,7 @@ ul {
   position: relative;
   margin-top: 90px;
   margin-bottom: 190px;
+
   &__shape {
     position: absolute;
     top: 400px;
@@ -242,6 +243,12 @@ ul {
     max-width: 1104px;
     margin: 0 auto;
     padding: 0 20px;
+    &--description {
+      p {
+        width: 50%;
+        margin: 0 auto;
+      }
+    }
     div {
       &:first-child {
         text-align: left;
@@ -344,12 +351,19 @@ ul {
   grid-template-columns: 1fr 1fr;
   gap: 50px;
   &__browser-extension-section {
+    &--description {
+      p {
+        width: 50%;
+        margin: 0 auto;
+      }
+    }
     &--container {
       width: 100%;
       max-width: 1104px;
       margin: 0 auto;
       font-size: inherit;
       padding: 0 20px;
+
       div {
         width: 100%;
         &:first-child {
@@ -527,6 +541,10 @@ ul {
   background-color: v.$soft-blue;
   padding: 50px 70px;
   color: v.$white;
+  h2 {
+    width: 50%;
+    margin: 0 auto;
+  }
   &__container {
     width: 100%;
     max-width: 1104px;
@@ -662,6 +680,11 @@ ul {
   .tabcontent {
     grid-template-columns: 1fr;
     &__browser-extension-section {
+      &--description {
+        p {
+          width: 100%;
+        }
+      }
       &--browser {
         grid-template-columns: 1fr;
       }
@@ -675,6 +698,12 @@ ul {
       width: 80%;
     }
     &__container {
+      &--description {
+        p {
+          width: 100%;
+          margin: 0 auto;
+        }
+      }
       div {
         &:first-child {
           h2 {
@@ -742,6 +771,9 @@ ul {
     }
   }
   .footer-contact-section {
+    h2 {
+      width: 100%;
+    }
     &__container {
       div {
         &:last-child {
